css/rocky_style.css
html, body {
  font-family: 'Open Sans', sans-serif;
  color: #282828 !important;
  margin: 0;
  padding: 0;
}

p {
  margin: 0;
}

.section_wrap {
  border-bottom: 1px solid #dc291e;
  padding-bottom: 20px;
  margin-bottom: 60px;
}

.section_wrap h2 {
  border-bottom: 1px solid #dc291e;
  padding-bottom: 10px;
  margin-bottom: 20px;
}

/* Text boxes ============================================================== */
.text_box {
  width: 700px;
  height: auto;
  display: block;
  vertical-align: top;
  margin-bottom: 20px;
}

.text_box h1 {
  color: #8a1913;
  padding-bottom: 15px;
  border-bottom: 1px solid #515844;
}

.text_box h2 {
  color: #8a1913;
  padding-bottom: 20px;
  border-bottom: 1px solid #515844;
}

.text_box p {
  padding-top: 20px;
}

#text_box_01 {
  background-color: #e5e8df;
  padding-bottom: 20px;
  width: 100%;
}

.text_box_inner {
  padding-top: 20px;
  padding-left: 20px;
}

/* Color boxes ============================================================== */
.color_box {
  width: 250px;
  height: 250px;
  display: inline-block;
  vertical-align: top;
  margin-bottom: 5px;
}

.color_box p {
  width: 230px;
  margin-left: auto;
  margin-right: auto;
}

#color_box_01 {
  background-color: #8a1913; /* #A51E16 */
  color: #ffffff;
}

#color_box_02 {
  background-color: #dc291e;
  color: #ffffff;
}

#color_box_03 {
  background-color: #282828;
  color: #ffffff;
}

#color_box_04 {
  background-color: #e5e8df;
}

#color_box_05 {
  background-color: #515844;
  color: #ffffff;
}

/* Buttons ================================================================== */
.gumdrop_button {
  width: 150px;
  height: 40px;
  margin-top: 20px;
  border: none;
  border-radius: 20px;
  background: #515844;
  color: #ffffff;
  font-size: 0.85em;
  transition: background 0.4s;
  -moz-transition: background 0.4s;
  -webkit-transition: background 0.4s;
}

.gumdrop_button:hover {
  transform:scale(1.1);
  background: #8A1913;
  transition: background 0.4s;
  -moz-transition: background 0.4s;
  -webkit-transition: background 0.4s;
}

.gumdrop_button:active {
  transform:scale(0.9);
  background: #dc291e;
  transition: background 0.2s;
  -moz-transition: background 0.2s;
  -webkit-transition: background 0.2s;
}

